--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <version>21.9.0.0</version>
         </dependency>
         
+        <!-- Base de datos H2 (en memoria) -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        
         <!-- Dependencias para Oracle Cloud Wallet (SSO) -->
         <dependency>
             <groupId>com.oracle.database.security</groupId>
